# rosbuild_example_catkinization

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
src/: library.cc  main.cc
